kustomizer/tests/kustomizer/testdata/full/envs/production/dataqa-api-rs-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-dataqa-api-rs
spec:
  tls:
  - hosts:
    - dataqa-api-rs.example.com
    secretName: dataqa-api-rs.example.com
