kustomizer/tests/kustomizer/testdata/full/envs/production/driftdb-server-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-driftdb-server
spec:
  template:
    spec:
      containers:
        - name: driftdb-server
          resources:
            limits:
              memory: 4Gi
            requests:
              memory: 1Gi
