kustomizer/tests/kustomizer/testdata/full/envs/production/driftdb-server-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-driftdb-server
spec:
  tls:
  - hosts:
    - api.example.com
    secretName: api-example-com-tls
