kustomizer/tests/kustomizer/testdata/full/envs/production/elasticsearch-ingestor-low-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-elasticsearch-ingestor-high
spec:
  template:
    spec:
      containers:
        - name: elasticsearch-ingestor-high
          resources:
            limits:
              memory: 4Gi
            requests:
              memory: 2Gi
