kustomizer/tests/kustomizer/testdata/full/envs/production/elasticsearch-ingestor-rs-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-elasticsearch-ingestor-rs
spec:
  template:
    spec:
      containers:
        - name: elasticsearch-ingestor-rs
          resources:
            limits:
              memory: 4Gi
            requests:
              memory: 2Gi
