kustomizer/tests/kustomizer/testdata/full/envs/production/mfe-router-secrets-patch.yaml
apiVersion: v1
kind: Secret
metadata:
  name: mfe-router-secrets
stringData:
  EXAMPLE: example
