kustomizer/tests/kustomizer/testdata/full/envs/production/ml-server-api-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-ml-server-api
spec:
  template:
    spec:
      containers:
        - name: ml-server
          resources:
            limits:
              memory: 8Gi
            requests:
              memory: 2Gi
