kustomizer/tests/kustomizer/testdata/full/envs/production/node-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-node
spec:
  template:
    spec:
      containers:
        - name: node
