kustomizer/tests/kustomizer/testdata/full/envs/production/pim-web-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-pim-web
spec:
  ingressClassName: nginx
  rules:
  - host: partspal.example.com
    http:
      paths:
      - backend:
          service:
            name: example-pim-web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  - host: pim.example.com
    http:
      paths:
      - backend:
          service:
            name: example-pim-web
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - partspal.example.com
    - pim.example.com
    secretName: partspal-example-com-tls
