kustomizer/tests/kustomizer/testdata/full/envs/production/shopify-integration2-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-shopify-integration2
spec:
  tls:
  - hosts:
    - shopify-integration.integrations.example.com
    secretName: shopify-integration.integrations.example.com
